--- a/index.html
+++ b/index.html
@@ -1413,7 +1413,16 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/062/697/origina
 					</div>
 				</div>
 			</div>
-
+			<div class="personal-info">
+				This project was coded by
+				<a
+					href="https://www.linkedin.com/in/cristianaa-santos/"
+					target="_blank"
+					>Cristiana Santos</a
+				>
+				and is
+				<a href="">open-sourced on GitHub</a>.
+			</div>
 			<script
 				src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 				integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
