--- a/index.html
+++ b/index.html
@@ -1438,7 +1438,11 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/062/697/origina
 					>Cristiana Santos</a
 				>
 				and is
-				<a href="">open-sourced on GitHub</a>.
+				<a
+					href="https://github.com/Mimii15/shecodes-ngo-project"
+					target="_blank"
+					>open-sourced on GitHub</a
+				>.
 			</div>
 			<script
 				src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
